feat: output div added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       />
 
       <button id="tell">Tell Me!!</button>
+      <div id="output"></div>
     </main>
     <script src="./script.js"></script>
   </body>
