feat: working logic of application added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Where's my Stonks?</h1>
     <main>
       <label for="initial-price">Initial Price</label>
-      <input type="number" placeholder="Enter the Initial Price" />
+      <input type="number" placeholder="Enter the Initial Price" id="initial-price" />
       <label for="stock-qty">Quantity of Stocks</label>
-      <input type="number" placeholder="Enter the Quantity of Stocks bought" />
+      <input type="number" id="stock-qty" placeholder="Enter the Quantity of Stocks bought" />
       <label for="current-price">Current Price</label>
       <input
         type="number"
